tests/sumo/extended/simulation_routing/personTrip/errors/unreachable_rides/vehroutes.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Fri May  4 10:29:57 2018 by Eclipse SUMO Version 6de3eed
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
        <additional-files value="input_additional.add.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <vehroute-output value="vehroutes.xml"/>
        <vehroute-output.skip-ptlines value="true"/>
    </output>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <person id="p0" depart="0.00">
        <ride from="beg" to="left" lines="1"/>
        <ride to="end" lines="1"/>
    </person>

</routes>
